--- a/style.css
+++ b/style.css
@@ -9,19 +9,19 @@ body{
 }
 #container1{
     position: fixed;
-    width: 294px;
-    height: 751px;
-    left: 8px;
-    top: 7px;
+    width: 18.5rem;
+    height: 46.7rem;
+    left: 0.5rems;
+    top: 0.4rem;
     background: rgb(38, 38, 38);
     border-radius: 30px;
 
 }
 #img1{
   
-        margin: 30px 55px;
-        width: 185px;
-        height: 175px;
+        margin: 2.5rem 2.5rem;
+        width: 12rem;
+        height: 12.5rem;
         
        
         border: none;
@@ -30,45 +30,45 @@ body{
     
 #name{
     color:white;
-    margin-top: -20px;
-    margin-left:98px ;
+    margin-top: -2rem;
+    margin-left:5rem ;
 
-    font-size: 20px;
+    font-size:1.5rem ;
 
 }
 #bil{
-    margin-left: 115px;
+    margin-left: 7rem;
     margin-top:-10px;
-    font-size:15px;
+    font-size:1rem;
 
 }
 .div1
 {
  position: fixed;
- top:295px;
- left: 24px;
-width:294px;
-height: 61px;
+ top:20rem;
+ left: 1rem;
+width:20rem;
+height: 3rem;
 
 
 }
 button{
-    width:270px;
-    height:47px;
+    width:17rem;
+    height:3rem;
     border-color: #111111;
     background-color: #111111;
     color:rgba(255, 255, 255, 0.5);
     border-radius:30px;
-    margin-top: 15px;
-    margin-right:50px;
+    margin-top: 1rem;
+    margin-right:1rem;
 }
 
 .h2{
 
     color:white;
-    font-size:20px;
-    margin-top:30px;
-    margin-left:36px;
+    font-size:1.5rem;
+    margin-top:2rem;
+    margin-left:2.2rem;
 }
 
 
@@ -76,33 +76,34 @@ button{
    
 
     position: fixed;
-    width: 1168px;
-    height: 367px;
-    left: 314px;
-    top: 7px;
+    width: 72rem;
+    height: 23rem;
+
+    left: 20rem;
+    top: 0.5rem;
     background: #262626;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
     border-radius: 30px;
 }
 #para1{
-    width:445px;
-    margin-top:36px;
-    margin-left:36px;
+    width:28rem;
+    margin-top:2rem;
+    margin-left:2rem;
 
 }
 #div2{
     
-    width: 477px;
-    height: 316px;
+    width: 28rem;
+    height: 20rem;
 }
 a{
     color:rgba(255, 255, 255, 0.5);
 }
 #div3{
-    margin:-265px 7px 0px 500px;
+    margin:-18rem 0.5rem 0rem 32rem;
     background-color: aliceblue;
-    width: 626px;
-    height: 265px;
+    width: 39rem;
+    height: 18rem;
     
 
 
@@ -110,22 +111,19 @@ border-radius:20px;
 }
 #img2{
 
-    width: 626px;
-    height: 265px;
-    
-
-
-border-radius:20px;
+    width: 39rem;
+    height: 18rem;
+    border-radius: 20px
 }
 
 
 
 #container3{
-   position: fixed;
-    width: 1168px;
-    height: 367px;
-    left: 314px;
-    top:388px;
+    position: fixed;
+    width: 72rem;
+    height: 22rem;
+    left: 20rem;
+    top: 25rem;
     background: #262626;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
     border-radius: 30px;
@@ -137,18 +135,18 @@ table{
    
 }
 #tt{
-    margin-top:25px;
-    margin-left:40px;
-
-    border:2px solid grey;
-    border-radius:30px;
-    width:1090px;
-    height:257px;
+    margin-top: 1rem;
+    margin-left: 2rem;
+    border: 2px solid grey;
+    border-radius: 30px;
+    width: 67rem;
+    height: 15rem;
 }
+
 th{
    
    
-    height: 50px;
+    height: 3rem;
     border-bottom:2px solid grey;
     border-right:2px solid grey;
 
@@ -167,6 +165,6 @@ border-right: none;
 .td{
     
     text-align: left;
-    padding-left: 10px;
+    padding-left: 2rem;
 
 }
